fix(select): Make chevron visible and clickable
TDS-251

--- a/src/components/Select/Select.modules.scss
+++ b/src/components/Select/Select.modules.scss
@@ -16,6 +16,8 @@
   &::-ms-expand {
     display: none;
   }
+
+  background-color: transparent;
 }
 
 .positionSelectOnTop {
